# SGRX-mirror

./: CMakeLists.txt  bootstrap.bat  bootstrap_mingw.bat  bootstrap_win32_ninja.bat  bootstrap_win32_vs.bat  bootstrap_win32clang.bat  build_defended_win32.sgs  build_tacstrike_resources.bat  cppbc.cmake  mpdgen.cmake  mpdgen.sgs  update_cppbc.bat
data-common/editor/: entities.sgs  ext.sgs  textures.sgs
data-common/levels/: _template.sgs  common.sgs  upgrade1.sgs
data-common/shaders/: __eq.shd  mtl_blend2.shd  mtl_bump.shd  mtl_decal.shd  mtl_default.shd  mtl_glass_dirtpass.shd  mtl_glass_multpass.shd  mtl_lamp.shd  mtl_leaf.shd  mtl_proj_default.shd  mtl_water.shd  ps_ss_fog.shd  sys_batchvtx.shd  sys_lighting.shd  sys_lvsl_ps.shd  sys_pp_final.shd  sys_pp_fog.shd  sys_pp_highpass.shd  vs_gentex.shd
data-common/shaders_d3d11/: flare.shd  mtl_blend2.shd  mtl_default.shd  mtl_lamp.shd  mtl_leaf.shd  mtl_particle.shd  ps_ss_fog.shd  sys_batchvtx.shd  sys_bv_ps.shd  sys_bv_vs.shd  sys_pp_bloom_blur_h.shd  sys_pp_bloom_blur_v.shd  sys_pp_bloom_dshp.shd  sys_pp_final.shd  sys_pp_vs.shd  tpl_common.shd  tpl_ps_base.shd  tpl_ps_ext_s4.shd  tpl_ps_shadow.shd  tpl_vs_base.shd  tpl_vs_mesh.shd  vs_flag.shd  vs_int_particle.shd
data-common/shaders_d3d9/: flare.shd  mtl_decal.shd  mtl_default.shd  mtl_glass_dirtpass.shd  mtl_glass_multpass.shd  mtl_lamp.shd  mtl_leaf.shd  mtl_particle.shd  mtl_proj_default.shd  ps_ss_fog.shd  sys_batchvtx.shd  sys_bv_ps.shd  sys_bv_vs.shd  sys_lighting.shd  sys_lvsl_ps.shd  sys_pp_bloom_blur_h.shd  sys_pp_bloom_blur_v.shd  sys_pp_bloom_dshp.shd  sys_pp_blur.shd  sys_pp_final.shd  sys_pp_highpass.shd  sys_pp_vs.shd  sys_proj_vs.shd  tpl_base.shd  tpl_base_fullbright.shd  tpl_base_proj.shd  tpl_ext_s4.shd  tpl_shadow.shd  tpl_vs_base.shd  vs_gentex.shd  vs_int_particle.shd
data-common/src/editor/: ext.sgs
data-common/src/levels/: common.sgs  ui_common.sgs  upgrade1.sgs
data-common/src/shaders/: __eq.shd  flare.shd  lighting.xsh  mtl_bsge.shd  mtl_bump.shd  mtl_bumpspec.shd  mtl_bumpspecgloss.shd  mtl_bumpspecglossemit.shd  mtl_bumpspecglossm.shd  mtl_decal.shd  mtl_default.shd  mtl_glass_dirtpass.shd  mtl_glass_multpass.shd  mtl_lamp.shd  mtl_particle.shd  mtl_proj_default.shd  mtl_screenspace16.shd  mtl_shallow_water.shd  mtl_water.shd  mtl_waterfall.shd  sys_cubemap_render.shd  sys_lighting.shd  sys_pp_blur.shd  sys_pp_final.shd  sys_pp_fog.shd  sys_pp_sky.shd  sys_pp_transfer.shd  sys_surface_shader.shd  vs_flag.shd
data-common/ui/: common.sgs
data-test/src/: game.cfg
data-test/src/chars/: tstest.chr
data-test/src/sys/: asset_revs.info  assets.txt  output_revs.info
data-test/src/ui/: test.sgs
data-test/ui/: test.sgs
engine/: CMakeLists.txt  culling.cpp  dds.c  dds.h  edgui.cpp  edgui.hpp  enganim.cpp  enganim.hpp  engine.cpp  engine.hpp  engine_int.hpp  engrender.cpp  font.cpp  image.cpp  launcher.c  mesh.cpp  physics.hpp  physics_bullet.cpp  renderer.hpp  renderer_d3d11.cpp  renderer_d3d9.cpp  script.cpp  script.hpp  sdl_events_min.h  sound.hpp  sound_fmod.cpp  utils.cpp  utils.hpp
ext/d3dx/: d3d11.h
ext/lib-win32/: fmod64_vc.lib  fmod_vc.lib  fmodstudio64_vc.lib  fmodstudio_vc.lib
ext/src/: bullet.hpp  bullet_BulletCollision.cpp  bullet_BulletDynamics.cpp  bullet_LinearMath.cpp  freetype1.c  libjpg1.c  libjpg2.c  libjpg3.c  libpng1.c  nuklear.h  sgscript.c  zlib1.c  zlib2.c  zlib3.c
ext/src/assimp/: CMakeLists.txt
ext/src/imgui/: imconfig.h  imgui.h  (+4 more)
ext/src/recast/DebugUtils/Source/: CMakeLists.txt
ext/src/recast/Detour/Source/: CMakeLists.txt
ext/src/recast/Recast/Source/: CMakeLists.txt
scripts/: contentproc.sgs  io_export_ss3dmesh.py  tacstrike.build.sgs
sdk/: engine.py  tool.py  view_profile.py
src-common/: CMakeLists.txt  compiler.cpp  edcomui.hpp  editor.cpp  levelcache.hpp  mapedit.hpp  psedit.cpp
src-polyflight/: CMakeLists.txt  polyflight.cpp
src-tacstrike/: CMakeLists.txt  actors.cpp  brsd4game.cpp  compiler.cpp  compiler.hpp  entities.cpp  game.cpp  game.hpp  ld32game.cpp  level.cpp  level.hpp  levelcache.hpp  psedit.cpp  systems.hpp
src/common/: CMakeLists.txt  aedit.cpp  aedit.hpp  aedit.mpd.hpp  aedit.mpd.sgs  assetcomp.cpp  assetcomp.hpp  charedit.cpp  charedit.mpd.hpp  charedit.mpd.sgs  common.mpd.sgs  compiler.cpp  compiler.hpp  cppbc_entities.cpp  cppbc_gamegui.cpp  cppbc_gfw.cpp  cppbc_gfwcore.cpp  cppbc_level.cpp  cppbc_scritem.cpp  csedit.cpp  edcomui.hpp  edutils.hpp  entities.cpp  entities.hpp  gamegui.cpp  gamegui.hpp  gfw.hpp  gfwcore.cpp  gfwcore.hpp  level.cpp  level.hpp  levelcache.hpp  mapedit.cpp  mapedit.hpp  mapedit.mpd.hpp  mapedit.mpd.sgs  mapedit_block.cpp  mapedit_edit.cpp  mapedit_ent.cpp  mapedit_gameobj.cpp  (+15 more)
src/engine/: CMakeLists.txt  culling.cpp  dds.c  dds.h  decalproj.cpp  edgui.cpp  edgui.hpp  enganim.cpp  enganim.hpp  engbatchr.cpp  engext.cpp  engext.hpp  engine.cpp  engine.hpp  engine_int.hpp  engrender.cpp  engrsrc.cpp  font.cpp  image.cpp  imgui.cpp  imgui.hpp  launcher.c  mesh.cpp  nkgui.cpp  nkgui.hpp  particlesys.cpp  particlesys.hpp  pathfinding.cpp  pathfinding.hpp  physics.hpp  physics_bullet.cpp  renderer.hpp  renderer_d3d11.cpp  renderer_d3d9.cpp  script.cpp  script.hpp  sdl_events_min.h  shader.cpp  sound.hpp  sound_fmod.cpp  (+4 more)
src/polyflight/: CMakeLists.txt  polyflight.cpp
src/smallgames/: CMakeLists.txt  breakage.cpp  polyflight.cpp
src/tacstrike/: CMakeLists.txt  actors.cpp  brsd4game.cpp  cppbc_entities.cpp  cppbc_entities_ts.cpp  cppbc_isr3entities.cpp  cppbc_level.cpp  cppbc_systems.cpp  entities.cpp  entities.hpp  entities_brsd4.cpp  entities_brsd4.hpp  entities_ld33.cpp  entities_ld33.hpp  entities_ts.cpp  entities_ts.hpp  game.cpp  gameui.cpp  gameui.hpp  isr3entities.cpp  isr3entities.hpp  isr3game.cpp  ld32game.cpp  ld33game.cpp  level.cpp  level.hpp  mld62game.cpp  systems.cpp  systems.hpp  testsuite.cpp  tsgame.hpp  tsui.cpp  tsui.hpp  wheelsgame.cpp
src/tools/: CMakeLists.txt  lmrender.cpp  meshproc.cpp  rdgen.cpp  texproc.cpp
staging/: defended_readme_lv.txt
tools/: CMakeLists.txt  blendcubedds.cpp  lmrender.cpp  rdgen.cpp
(+73 files in other folders)
